Fixed issue of footer not being pushed dowwn and cards bleeding through when wrapping. Solution was set for content-container class and set display: flex and flex: 1.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -77,18 +77,12 @@ body {
   align-items: center;
   flex: 1;
   gap: 30px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 75px;
+  padding: 48px;
 }
 
 .content-container {
-  border: 5px dashed black;
   display: flex;
-  align-items: stretch;
-  height: 81vh;
-  flex-grow: 1;
-  flex-shrink: 1;
+  flex: 1;
 }
 
 a,
